Entfernen-Button hinzugefügt+Route auf POST engeschränkt(SICHERHEIT)+refactor

--- a/templates/todo/todoapp.html.twig
+++ b/templates/todo/todoapp.html.twig
@@ -1,10 +1,15 @@
-<h1>Mein To-Do-Liste</h1>
-<p> 
-    {% for todo in todos %}
-        <li> {{ todo }} </li>
+<h1>Meine To-Do-Liste</h1>
+<ol> 
+    {% for index, todo in todos %}
+        <li> {{ todo }} 
+            <form action="{{ path('deleteTodo') }}" method="post" style="display:inline;">
+                <input type="hidden" name="index" value="{{ index }}">
+                <button type="submit">Entfernen</button>
+            </form>
+        </li>
     {% endfor %}
-</p>
-<form action="/todoapp" method="post">
+</ol>
+<form action="{{ path('todoapp') }}" method="post">
     <input type="text" name="todos" placeholder="Neue Aufgabe">
     <button type="submit">Hinzufügen</button>
 </form>
